Adding a few GC details and WIP Struct Reader